2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/01_empty_main.deca
// Description :
//      le cas de EmptyMain
// Resultats :
//    Valide 
//
// Historique :
// cree le 09/01/2024

{

}