2A/05_Projet_GL/src/test/deca/context/invalid/complet/03_super_class_non_def.deca
// Description :
//      super classe non definie 
// Resultats :
//    ligne 8 : classe E n'est paas definie
// Historique :
//  cree le 16/01/2024

class A extends E {
    
}